2009-09-27  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/jit-impl.ss : Added label fixup function.
	                             Now only supportd je imm8 only.

2009-09-24  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/jit-impl.ss (u8-list->c-procedure+retq): Added. It addes (retq) instruction at tail of u8-list.

	* lib/mosh/jit/test.ss : Removed tests for VM instruction assembled results, since it is hard to maintainance.
	                         Instead, we test a behavior of jit compiled VM instruction.

2009-09-23  higepon  <higepon@users.sourceforge.jp>

	* ExecutableMemory.h : Added flush() function.

	* lib/mosh/jit/test.ss: REFER_LOCAL_PUSH_CONSTAT.

	* main.cpp : Added -O option, shows vm-register offset.

2009-09-17  higepon  <higepon@users.sourceforge.jp>

	* CompilerProcedures.cpp : Added u8-list->c-procedure.

2009-09-14  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/test.ss (mosh): can assembel (movq reg reg).

2009-09-11  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/jit/test.ss : Added.

	* lib/mosh/jit.ss : Added.

2009-09-04  higepon  <higepon@users.sourceforge.jp>

	* Transcoder.cpp (Transcoder::Transcoder): Fixed the default EolStyle of Transcoder ponted out by mtakuya.

	* FFIProcedures.cpp : void* argument of callback is converted to pointer object.

	* ffi_stub_x86_64.S : Renamed.

2009-09-03  higepon  <higepon@users.sourceforge.jp>

	* test/ffi.scm: Now callback works on OSX and Ubuntu amd64.

2009-08-31  higepon  <higepon@users.sourceforge.jp>

	* Makefile.am : Added ffi_stub_xx.s support.

2009-08-30  higepon  <higepon@users.sourceforge.jp>

	* FFITest.cpp (getArgumentsStub): Added.
	              (getArgumentsStub2): Added.

2009-08-28  higepon  <higepon@users.sourceforge.jp>

	* FFIProcedures.cpp (struct CallBackTrampoline): Added for FFI callback.

2009-08-26  higepon  <higepon@users.sourceforge.jp>

	* test/list.scm : Passed.	
